# sessions-redis

./: .gitignore  .gitlab-ci.yml  .hgignore  LICENSE.txt  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/: __init__.py
nagare/contrib/: __init__.py  redis_session.py  redis_session_latest.py  redis_session_legacy.py
nagare/contrib/tests/: __init__.py  mock_redis.py  test_redis_session_latest.py  test_redis_session_legacy.py
nagare/sessions/: redis_sessions.py
src/nagare/sessions/: redis_sessions.py
