[metadata]
name = nagare-sessions-redis
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Sessions in redis server
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/sessions-redis
    Tracker = https://github.com/nagareproject/sessions-redis/issues

[options]
zip_safe = False
packages = find:
install_requires =
    redis
    nagare-services-redis
    nagare-server-http
    nagare-services-sessions

[options.entry_points]
nagare.sessions =
    redis = nagare.sessions.redis_sessions:Sessions

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
